--- a/Changes
+++ b/Changes
@@ -13,3 +13,6 @@ Revision history for Perl extension Net::Amazon::AWSSign.
 0.04  Thu Oct 22 09:17:25 2009
 	- Another documentation problem - had an old name for the SOAP function in the synopsis.
 
+0.05  Thu Oct 22 10:16:37 2009
+	- Added prereqs to Makefile.PL
+
