--- a/Changes
+++ b/Changes
@@ -16,3 +16,6 @@ Revision history for Perl extension Net::Amazon::AWSSign.
 0.05  Thu Oct 22 10:16:37 2009
 	- Added prereqs to Makefile.PL
 
+0.06  Fri Oct 23 11:45:52 2009
+	- Reduced required Perl version to 5.8.8 - should be fine
+
