--- a/Changes
+++ b/Changes
@@ -22,3 +22,6 @@ Revision history for Perl extension Net::Amazon::AWSSign.
 0.07  Mon Oct 26 11:40:07 2009
 	- Changed required version to 5.8 using another mod as template.  Hopefully that'll do it!
 
+0.08  Thu Jan 21 09:57:22 2010
+	- Updated documentation.  No changes to actual code.
+
