--- a/Changes
+++ b/Changes
@@ -32,3 +32,5 @@ Revision history for Perl extension Net::Amazon::AWSSign.
 0.10  Tue Aug 16 11:04:07 2011
 	- Before uri encoding arg string, uri decode them first.  This allows for escaped chars in the arguments, specifically ampersand
 
+0.11  Tue Aug 16 12:06:58 2011
+	- Added the whole escaping thing in the documentation.  Shame on me for forgetting.
