--- a/Changes
+++ b/Changes
@@ -34,3 +34,6 @@ Revision history for Perl extension Net::Amazon::AWSSign.
 
 0.11  Tue Aug 16 12:06:58 2011
 	- Added the whole escaping thing in the documentation.  Shame on me for forgetting.
+
+0.12  Wed Nov 23 09:33:49 2011
+	- Put ItemSearch in quotes for testing to (hopefully) fix test compilation errors in Perl 5.14.1 (that exists?!?)
